Fix main title alignment on mobile.

--- a/kaiyaku-form.css
+++ b/kaiyaku-form.css
@@ -23,6 +23,12 @@ h1 {
     white-space: nowrap;
   }
 
+@media screen and (max-width: 768px) {
+  h1 {
+    margin: 30px 0;
+}
+  }   
+
 .inner {
     max-width: 1070px;
     margin: auto;
